--- a/directbak.yaml
+++ b/directbak.yaml
@@ -4994,7 +4994,6 @@ payload:
   - '+.58921.com'
   - '+.5898yun.com'
   - '+.58abb.com'
-  - '+.58bangmang.com'
   - '+.58baogao.com'
   - '+.58buy.com'
   - '+.58che.com'
@@ -5014,7 +5013,6 @@ payload:
   - '+.58gameup.com'
   - '+.58ganji.com'
   - '+.58house.com'
-  - '+.58huoban.com'
   - '+.58hzb.com'
   - '+.58img.com'
   - '+.58insure.com'
@@ -8600,7 +8598,6 @@ payload:
   - '+.aliyun-youhui.com'
   - '+.aliyun.com'
   - '+.aliyun.org'
-  - '+.aliyun365.com'
   - '+.aliyunbaike.com'
   - '+.aliyuncdn.com'
   - '+.aliyunceng.com'
@@ -9455,7 +9452,6 @@ payload:
   - '+.artronimages.com'
   - '+.artrus.net'
   - '+.artsbuy.com'
-  - '+.artsncollections.com'
   - '+.artvisioncg.com'
   - '+.artwe.com'
   - '+.artwer.com'
@@ -9519,7 +9515,6 @@ payload:
   - '+.askxt.org'
   - '+.aslzw.com'
   - '+.asm64.com'
-  - '+.asmrv.com'
   - '+.asnlab.com'
   - '+.asnlab.org'
   - '+.aso.ink'
@@ -9673,6 +9668,7 @@ payload:
   - '+.auto98.com'
   - '+.autoai.com'
   - '+.autobaidu.com'
+  - '+.autobit.xyz'
   - '+.autobizreview.com'
   - '+.autocamel.com'
   - '+.autochina360.com'
@@ -11647,7 +11643,6 @@ payload:
   - '+.bjunionstar.net'
   - '+.bjuri.com'
   - '+.bjwanjiabao.com'
-  - '+.bjweimob.com'
   - '+.bjweizhifu.com'
   - '+.bjwfz.com'
   - '+.bjwhds.com'
@@ -11796,6 +11791,7 @@ payload:
   - '+.blue-city.com'
   - '+.blue-zero.com'
   - '+.bluebeebox.com'
+  - '+.bluecatyun.com'
   - '+.bluecefa.com'
   - '+.blued.com'
   - '+.bluedon.com'
@@ -13190,7 +13186,6 @@ payload:
   - '+.ccoco.vip'
   - '+.ccoi.ren'
   - '+.ccopyright.com'
-  - '+.ccpc.io'
   - '+.ccpc360.com'
   - '+.ccpgssd.com'
   - '+.ccpit-academy.org'
@@ -14288,7 +14283,6 @@ payload:
   - '+.china-consulate.org'
   - '+.china-csdz.com'
   - '+.china-csm.org'
-  - '+.china-customs.com'
   - '+.china-cw.com'
   - '+.china-d.com'
   - '+.china-def.com'
@@ -18124,7 +18118,6 @@ payload:
   - '+.dawaner.net'
   - '+.daweibro.com'
   - '+.daweisoft.com'
-  - '+.daweixinke.com'
   - '+.dawenming.com'
   - '+.dawenxue.net'
   - '+.dawenxue.org'
@@ -18138,7 +18131,6 @@ payload:
   - '+.daxia.com'
   - '+.daxia520.com'
   - '+.daxiaamu.com'
-  - '+.daxiangdaili.com'
   - '+.daxianghuyu.com'
   - '+.daxiangqun.net'
   - '+.daxiit.com'
@@ -18431,6 +18423,7 @@ payload:
   - '+.deifei.com'
   - '+.deifgs.com'
   - '+.deikuo.com'
+  - '+.deiniu.com'
   - '+.dekeego.com'
   - '+.dektw.com'
   - '+.delanauto.com'
@@ -21802,7 +21795,6 @@ payload:
   - '+.fabang.com'
   - '+.fabao365.com'
   - '+.fabaofoundation.com'
-  - '+.fabco-air.asia'
   - '+.fabiao.com'
   - '+.fabiao.net'
   - '+.fabiaoqing.com'
@@ -22908,7 +22900,6 @@ payload:
   - '+.fomen123.com'
   - '+.foneplatform.com'
   - '+.fongmong.com'
-  - '+.fonrex.com'
   - '+.fonsoft.net'
   - '+.fonsview.com'
   - '+.font.im'
@@ -23889,6 +23880,7 @@ payload:
   - '+.gdcyl.org'
   - '+.gddarf.com'
   - '+.gddata.net'
+  - '+.gddcm.com'
   - '+.gddg.cc'
   - '+.gddhn.com'
   - '+.gdebidding.com'
@@ -24132,6 +24124,7 @@ payload:
   - '+.getcn.net'
   - '+.gethover.com'
   - '+.getiis.com'
+  - '+.getiot.tech'
   - '+.getip.name'
   - '+.getkwai.com'
   - '+.getlema.com'
@@ -24822,7 +24815,6 @@ payload:
   - '+.gouwanmei.com'
   - '+.gouwubang.com'
   - '+.gouwuke.com'
-  - '+.gouwumai.com'
   - '+.gouwuyu.com'
   - '+.govfz.com'
   - '+.govmade.com'
@@ -25192,7 +25184,6 @@ payload:
   - '+.guduodata.com'
   - '+.guer.org'
   - '+.guestops.com'
-  - '+.gufeiposuiji.com'
   - '+.gufengge.org'
   - '+.gufengmh.com'
   - '+.gufengmh8.com'
@@ -26052,7 +26043,6 @@ payload:
   - '+.hanhaiqikan.com'
   - '+.hanhande.com'
   - '+.hanhande.net'
-  - '+.hanhuazu.cc'
   - '+.hanjianbing.org'
   - '+.hanjiaying.com'
   - '+.hanjie.biz'
@@ -27606,7 +27596,6 @@ payload:
   - '+.hmyz.com'
   - '+.hmz.com'
   - '+.hmzixin.com'
-  - '+.hmzone.com'
   - '+.hmzs.net'
   - '+.hmzx163.com'
   - '+.hn-pc.com'
@@ -29891,6 +29880,7 @@ payload:
   - '+.ielts68.com'
   - '+.ieltschn.com'
   - '+.iemblog.com'
+  - '+.iemiq.com'
   - '+.ienjoys.com'
   - '+.ienjoys.mobi'
   - '+.iermu.com'
@@ -29967,7 +29957,6 @@ payload:
   - '+.ifreecdn.com'
   - '+.ifreecomm.com'
   - '+.ifreedom001.com'
-  - '+.ifreepsd.com'
   - '+.ifreetalk.com'
   - '+.ifreeurl.com'
   - '+.ifreewallpaper.com'
@@ -30280,7 +30269,6 @@ payload:
   - '+.im170.com'
   - '+.im286.com'
   - '+.im286.net'
-  - '+.im298.com'
   - '+.im2maker.com'
   - '+.im323.com'
   - '+.im520.com'
@@ -30539,6 +30527,7 @@ payload:
   - '+.infobidding.com'
   - '+.infobigdata.com'
   - '+.infocomm-journal.com'
+  - '+.infohpc.com'
   - '+.infoier.com'
   - '+.infoipwest.com'
   - '+.infong.net'
@@ -31641,7 +31630,6 @@ payload:
   - '+.jd360.hk'
   - '+.jd5.com'
   - '+.jdair.net'
-  - '+.jdajf.com'
   - '+.jdallianz.com'
   - '+.jdapi.com'
   - '+.jdb100.com'
@@ -31689,7 +31677,6 @@ payload:
   - '+.jdjob88.com'
   - '+.jdjrdns.com'
   - '+.jdjygold.com'
-  - '+.jdjys.com'
   - '+.jdkcb.com'
   - '+.jdl.com'
   - '+.jdluosi.com'
@@ -33766,7 +33753,6 @@ payload:
   - '+.jxpz888.com'
   - '+.jxqcw.com'
   - '+.jxqgpx.com'
-  - '+.jxrencai.com'
   - '+.jxrjzx.com'
   - '+.jxrsrc.com'
   - '+.jxrtv.com'
@@ -33922,7 +33908,6 @@ payload:
   - '+.jzyx.com'
   - '+.jzzhw.com'
   - '+.jzzx.com'
-  - '+.jzzxlm.com'
   - '+.jzzy666.com'
   - '+.k-day.com'
   - '+.k-kbox.com'
@@ -34156,7 +34141,6 @@ payload:
   - '+.kantu.com'
   - '+.kanwby.com'
   - '+.kanxiqu.com'
-  - '+.kanxsw.com'
   - '+.kanxue.com'
   - '+.kanzhen666.com'
   - '+.kanzhun.com'
@@ -35592,7 +35576,6 @@ payload:
   - '+.langlvseo.com'
   - '+.langmanzg.com'
   - '+.langmanzw.com'
-  - '+.langmeijy.net'
   - '+.langren001.com'
   - '+.langren8.com'
   - '+.langrencard.com'
@@ -35676,12 +35659,14 @@ payload:
   - '+.lanzhouunicom.com'
   - '+.lanzhuwh.com'
   - '+.lanzou.com'
+  - '+.lanzoub.com'
   - '+.lanzouf.com'
   - '+.lanzoug.com'
   - '+.lanzoui.com'
   - '+.lanzoum.com'
   - '+.lanzoup.com'
   - '+.lanzouq.com'
+  - '+.lanzouw.com'
   - '+.lanzoux.com'
   - '+.lanzun.net'
   - '+.lao9123.com'
@@ -35918,6 +35903,7 @@ payload:
   - '+.leadermall.com'
   - '+.leadge.com'
   - '+.leadong.com'
+  - '+.leadstong.com'
   - '+.leaforbook.com'
   - '+.leafword.com'
   - '+.leagcard.com'
@@ -38016,7 +38002,6 @@ payload:
   - '+.lyps.net'
   - '+.lypyxx.com'
   - '+.lyqugee.com'
-  - '+.lyragosa.com'
   - '+.lyrc.cc'
   - '+.lyric-robot.com'
   - '+.lyricsv.app'
@@ -38496,7 +38481,6 @@ payload:
   - '+.maotuying.com'
   - '+.maowow.com'
   - '+.maoxinhang.com'
-  - '+.maoxun.net'
   - '+.maoyan.com'
   - '+.maoyi.biz'
   - '+.maoyia.com'
@@ -39219,6 +39203,7 @@ payload:
   - '+.mianfeidianhua.net'
   - '+.mianfeiic.com'
   - '+.mianfeiwendang.com'
+  - '+.mianfeiziti.com'
   - '+.mianhuatang.cc'
   - '+.mianhuatang.la'
   - '+.mianjue.com'
@@ -40360,6 +40345,7 @@ payload:
   - '+.musicchina-expo.com'
   - '+.musicdu.com'
   - '+.musiceol.com'
+  - '+.musicheng.com'
   - '+.musicsky.org'
   - '+.musikid.com'
   - '+.musiness.vip'
@@ -40508,7 +40494,6 @@ payload:
   - '+.mycar168.com'
   - '+.mycaraok.com'
   - '+.mycardgame.net'
-  - '+.mycat.io'
   - '+.mychemy.com'
   - '+.mychery.com'
   - '+.mychery.net'
@@ -41305,7 +41290,6 @@ payload:
   - '+.nhzs.com'
   - '+.ni8.com'
   - '+.nianbin.com'
-  - '+.nianhuiba.com'
   - '+.nianw.com'
   - '+.nianzhi.cc'
   - '+.niaobee.com'
@@ -41929,7 +41913,6 @@ payload:
   - '+.nyshszh.com'
   - '+.nysmfc.com'
   - '+.nyyzjg.com'
-  - '+.nyzydz.com'
   - '+.nz86.com'
   - '+.nzbdw.com'
   - '+.nzchina.com'
@@ -44417,7 +44400,6 @@ payload:
   - '+.qefee.com'
   - '+.qefeng.com'
   - '+.qeto.com'
-  - '+.qf.rs'
   - '+.qf027.com'
   - '+.qfang.com'
   - '+.qfangimg.com'
@@ -45587,6 +45569,7 @@ payload:
   - '+.qumingxing.com'
   - '+.qumitech.com'
   - '+.qun.hk'
+  - '+.qun100.com'
   - '+.quna.com'
   - '+.qunaer.com'
   - '+.qunale888.com'
@@ -45902,6 +45885,7 @@ payload:
   - '+.raorao.com'
   - '+.rap8.com'
   - '+.rapidppt.com'
+  - '+.rapiz.me'
   - '+.rapoo.com'
   - '+.rapospectre.com'
   - '+.rarcbank.com'
@@ -47352,7 +47336,6 @@ payload:
   - '+.sdtxmq.com'
   - '+.sduod.com'
   - '+.sdv8dvj.com'
-  - '+.sdwanping.com'
   - '+.sdwdxl.com'
   - '+.sdwenlian.com'
   - '+.sdwgyy.com'
@@ -47946,7 +47929,6 @@ payload:
   - '+.shareinstall.com'
   - '+.shareinstall.net'
   - '+.shareoneplanet.org'
-  - '+.sharetao.com'
   - '+.sharetome.com'
   - '+.sharetrace.com'
   - '+.sharevdi.com'
@@ -48206,7 +48188,6 @@ payload:
   - '+.shibor.org'
   - '+.shicai.biz'
   - '+.shicaidai.com'
-  - '+.shicaids.com'
   - '+.shichangbu.com'
   - '+.shichuedu.com'
   - '+.shici.store'
@@ -48228,7 +48209,6 @@ payload:
   - '+.shifeng.com'
   - '+.shifenyuedu.com'
   - '+.shigaoshan.com'
-  - '+.shigoog.com'
   - '+.shiguangkey.com'
   - '+.shiguangxu.com'
   - '+.shiguangyouju.com'
@@ -48280,7 +48260,6 @@ payload:
   - '+.shineenergy.com'
   - '+.shinelink.vip'
   - '+.shinelon.com'
-  - '+.shinemediaworld.com'
   - '+.shinerayad.com'
   - '+.shineu.com'
   - '+.shineway.com'
@@ -49673,6 +49652,7 @@ payload:
   - '+.sogouimecdn.com'
   - '+.sogouw.com'
   - '+.sogouwenwen.com'
+  - '+.sogowan.com'
   - '+.soharp.com'
   - '+.soho-yiming.com'
   - '+.soho3q.com'
@@ -52229,6 +52209,7 @@ payload:
   - '+.tianrow.com'
   - '+.tianruixinxi.com'
   - '+.tianruiyun.com'
+  - '+.tianruo.net'
   - '+.tiansenjituan.com'
   - '+.tianshan277.com'
   - '+.tianshangrenjian123.com'
@@ -52378,6 +52359,7 @@ payload:
   - '+.tikersport.com'
   - '+.tikuol.com'
   - '+.tillcn.com'
+  - '+.tillglance.com'
   - '+.timanetworks.com'
   - '+.timchen314.com'
   - '+.time-weekly.com'
@@ -53449,6 +53431,7 @@ payload:
   - '+.tuliren.com'
   - '+.tuliu.com'
   - '+.tumajewelry.com'
+  - '+.tumanfen.com'
   - '+.tumanyi.com'
   - '+.tumeinv.com'
   - '+.tumukeji.com'
@@ -54545,7 +54528,6 @@ payload:
   - '+.v4dwkcv.com'
   - '+.v5.com'
   - '+.v54321.com'
-  - '+.v58003.com'
   - '+.v58008.com'
   - '+.v5bjq.com'
   - '+.v5cam.com'
@@ -56232,7 +56214,6 @@ payload:
   - '+.wenfangjushe.com'
   - '+.wenfangnet.com'
   - '+.wenfatang.net'
-  - '+.wenfuxiang.com'
   - '+.wengbi.com'
   - '+.wengkui.com'
   - '+.wenguang.com'
@@ -59266,7 +59247,6 @@ payload:
   - '+.xingyuhuwai.com'
   - '+.xingyunba.com'
   - '+.xingyunxc.com'
-  - '+.xingyunxingqiu.wang'
   - '+.xingyusoft.net'
   - '+.xingyuyouxi.com'
   - '+.xingzhang.com'
@@ -59275,7 +59255,6 @@ payload:
   - '+.xingzhiyue.com'
   - '+.xingzuo.com'
   - '+.xingzuo123.com'
-  - '+.xingzuo8.com'
   - '+.xingzuo8090.com'
   - '+.xingzuoshu.com'
   - '+.xingzuowu.com'
@@ -59757,7 +59736,6 @@ payload:
   - '+.xm909.com'
   - '+.xm9m.com'
   - '+.xmadx.net'
-  - '+.xmall1.com'
   - '+.xmamiga.com'
   - '+.xmanblog.net'
   - '+.xmantou.com'
@@ -60952,7 +60930,6 @@ payload:
   - '+.ycbright.com'
   - '+.yccdn.com'
   - '+.ycdjy.com'
-  - '+.ycdlfw.com'
   - '+.ycdongxu.com'
   - '+.ycdywl.com'
   - '+.yceshop.com'
@@ -61517,7 +61494,6 @@ payload:
   - '+.yinchengwealth.com'
   - '+.yindon.com'
   - '+.yindou.com'
-  - '+.yinduabc.com'
   - '+.yindudigital.com'
   - '+.yinduzx.com'
   - '+.yineitong.com'
@@ -62926,7 +62902,6 @@ payload:
   - '+.yugasun.com'
   - '+.yuguo.us'
   - '+.yuguod.com'
-  - '+.yuguozw.com'
   - '+.yuheii.com'
   - '+.yuheng.tech'
   - '+.yuhou.com'
@@ -64941,7 +64916,6 @@ payload:
   - '+.zhuatang.com'
   - '+.zhuax.com'
   - '+.zhuaxia.com'
-  - '+.zhuaying.com'
   - '+.zhuayou.com'
   - '+.zhuayoukong.com'
   - '+.zhuazi.com'
@@ -65381,7 +65355,6 @@ payload:
   - '+.zjjr.com'
   - '+.zjjsbank.com'
   - '+.zjjsit.com'
-  - '+.zjjta.com'
   - '+.zjjubao.com'
   - '+.zjjushu.com'
   - '+.zjjy.com'
@@ -65919,7 +65892,6 @@ payload:
   - '+.ztrhmall.com'
   - '+.ztrong.com'
   - '+.ztsafe.com'
-  - '+.ztsfc.com'
   - '+.ztt.cc'
   - '+.zttx-exp.com'
   - '+.zttx.com'
@@ -66385,7 +66357,6 @@ payload:
   - '+.zzydb.com'
   - '+.zzyedu.org'
   - '+.zzyichen.net'
-  - '+.zzyilou.com'
   - '+.zzyiquan.com'
   - '+.zzyjs.com'
   - '+.zzyjsmba.com'
