--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1534,6 +1534,7 @@ payload:
   - '+.173sy.com'
   - '+.173um.com'
   - '+.173uu.com'
+  - '+.173zb.com'
   - '+.173zy.com'
   - '+.17446.com'
   - '+.17558.net'
@@ -3178,7 +3179,6 @@ payload:
   - '+.371house.com'
   - '+.371love.com'
   - '+.371site.com'
-  - '+.371zhongyi.com'
   - '+.37201.com'
   - '+.3721ps.com'
   - '+.3722.com'
@@ -3624,7 +3624,6 @@ payload:
   - '+.44te.com'
   - '+.44vs.com'
   - '+.453600.net'
-  - '+.455261.com'
   - '+.45575.com'
   - '+.456.net'
   - '+.4567.tv'
@@ -3961,7 +3960,6 @@ payload:
   - '+.51chuli.com'
   - '+.51cir.com'
   - '+.51cjyy.com'
-  - '+.51cma.org'
   - '+.51code.com'
   - '+.51cok.com'
   - '+.51comp.com'
@@ -4716,7 +4714,6 @@ payload:
   - '+.52youpiao.com'
   - '+.52youtu.com'
   - '+.52ywan.com'
-  - '+.52yww.com'
   - '+.52yxyx.com'
   - '+.52z.com'
   - '+.52zhaopin.com'
@@ -5521,6 +5518,7 @@ payload:
   - '+.66perfect.com'
   - '+.66php.com'
   - '+.66play.com'
+  - '+.66rjz.com'
   - '+.66rou.com'
   - '+.66rpg.com'
   - '+.66ruian.com'
@@ -6641,7 +6639,6 @@ payload:
   - '+.90tank.com'
   - '+.90vm.com'
   - '+.90wmoyu.com'
-  - '+.90wx.com'
   - '+.90yang.com'
   - '+.90zm.net'
   - '+.91.com'
@@ -6820,7 +6817,6 @@ payload:
   - '+.91tianqi.com'
   - '+.91ting.net'
   - '+.91tingge.com'
-  - '+.91town.com'
   - '+.91tuyatu.com'
   - '+.91tw.net'
   - '+.91ud.com'
@@ -7043,6 +7039,7 @@ payload:
   - '+.9560.cc'
   - '+.9564.com'
   - '+.9565.com'
+  - '+.95862788.com'
   - '+.9588.com'
   - '+.959249.com'
   - '+.95949c.com'
@@ -7118,12 +7115,12 @@ payload:
   - '+.96ni.net'
   - '+.96pc.com'
   - '+.96pk.com'
-  - '+.96plus.com'
   - '+.96sdk.com'
   - '+.96shuba.cc'
   - '+.96sir.com'
   - '+.96ttt.com'
   - '+.96weixin.com'
+  - '+.96youhuiquan.com'
   - '+.96yx.com'
   - '+.96zxue.com'
   - '+.97-7.com'
@@ -7299,6 +7296,7 @@ payload:
   - '+.99qumingzi.com'
   - '+.99read.com'
   - '+.99rom.com'
+  - '+.99shou.com'
   - '+.99sky.com'
   - '+.99sun.com'
   - '+.99sushe.com'
@@ -7482,6 +7480,7 @@ payload:
   - '+.a632079.me'
   - '+.a67dy.com'
   - '+.a6a1.com'
+  - '+.a6shi.com'
   - '+.a7.com'
   - '+.a8.com'
   - '+.a8f947.com'
@@ -7759,6 +7758,7 @@ payload:
   - '+.adlvyou.com'
   - '+.admai.com'
   - '+.admaimai.com'
+  - '+.admama.com'
   - '+.admamax.com'
   - '+.admasterto.com'
   - '+.admin.edu.pl'
@@ -8215,7 +8215,6 @@ payload:
   - '+.ainirobot.com'
   - '+.ainiseo.com'
   - '+.ainiu.net'
-  - '+.ainiuwa.com'
   - '+.ainyi.com'
   - '+.aiodt.com'
   - '+.aiotvoice.com'
@@ -8590,6 +8589,7 @@ payload:
   - '+.aliyuncs.com'
   - '+.aliyundaiwei.com'
   - '+.aliyunddos0002.com'
+  - '+.aliyunddos0003.com'
   - '+.aliyunddos0005.com'
   - '+.aliyunddos0006.com'
   - '+.aliyunddos0010.com'
@@ -9170,6 +9170,7 @@ payload:
   - '+.apizl.com'
   - '+.apizza.cc'
   - '+.apizza.net'
+  - '+.apjingsi.com'
   - '+.apk3.com'
   - '+.apk8.com'
   - '+.apkevery.com'
@@ -9896,6 +9897,7 @@ payload:
   - '+.bafangjuhe.com'
   - '+.bafangka.com'
   - '+.bafangwang.com'
+  - '+.bag198.com'
   - '+.bagb2b.com'
   - '+.bagesoft.net'
   - '+.bagevent.com'
@@ -12544,6 +12546,7 @@ payload:
   - '+.bzkad.com'
   - '+.bzko.com'
   - '+.bzmfxz.com'
+  - '+.bzmss.com'
   - '+.bzname.com'
   - '+.bznx.net'
   - '+.bzonl.com'
@@ -12737,7 +12740,6 @@ payload:
   - '+.cailutong.com'
   - '+.cailuw.com'
   - '+.caimai.cc'
-  - '+.caimaovip.com'
   - '+.caimei365.com'
   - '+.caimogu.net'
   - '+.caimomo.com'
@@ -13304,7 +13306,6 @@ payload:
   - '+.cdaten.com'
   - '+.cdbcw.com'
   - '+.cdbdsec.com'
-  - '+.cdbjh.com'
   - '+.cdbsdyk.com'
   - '+.cdbsfund.com'
   - '+.cdbybo.com'
@@ -13617,6 +13618,7 @@ payload:
   - '+.cersp.com'
   - '+.ces-transaction.com'
   - '+.cescnb.com'
+  - '+.ceseasons.com'
   - '+.cesfutures.com'
   - '+.ceshi.com'
   - '+.ceshi112.com'
@@ -18243,6 +18245,7 @@ payload:
   - '+.dcxnews.com'
   - '+.dczou.com'
   - '+.dd-advisor.com'
+  - '+.dd-gz.com'
   - '+.dd-img.com'
   - '+.dd.net'
   - '+.dd128.com'
@@ -18329,6 +18332,7 @@ payload:
   - '+.ddztv.com'
   - '+.ddzuqin.com'
   - '+.de-moe.org'
+  - '+.de.net'
   - '+.de0.cc'
   - '+.de123.net'
   - '+.de1919.com'
@@ -18458,6 +18462,8 @@ payload:
   - '+.dengtadaka.com'
   - '+.dengxiaolong.com'
   - '+.dengxiaopingnet.com'
+  - '+.denic.de'
+  - '+.denic.net'
   - '+.dentistshow.com'
   - '+.denuoexpo.com'
   - '+.deosin.com'
@@ -18703,7 +18709,6 @@ payload:
   - '+.dianbucuo.com'
   - '+.diancaijun.com'
   - '+.dianchacha.com'
-  - '+.diandainfo.com'
   - '+.diandanbao.com'
   - '+.diandao.org'
   - '+.diandaxia.com'
@@ -19288,8 +19293,6 @@ payload:
   - '+.dnsddos.com'
   - '+.dnsdiy.com'
   - '+.dnsdizhi.com'
-  - '+.dnsdun.com'
-  - '+.dnsdun.net'
   - '+.dnsfamily.com'
   - '+.dnsfang.com'
   - '+.dnsff.com'
@@ -19428,7 +19431,6 @@ payload:
   - '+.domp4.com'
   - '+.domyshop.com'
   - '+.doname.com'
-  - '+.doncc.org'
   - '+.donews.com'
   - '+.dong-shou.com'
   - '+.dong-xu.com'
@@ -19934,6 +19936,7 @@ payload:
   - '+.dujiapin.com'
   - '+.dujin.org'
   - '+.dujiza.com'
+  - '+.dujowah4i45.com'
   - '+.dukechiang.com'
   - '+.dukharo.com'
   - '+.dukuai.com'
@@ -21986,7 +21989,6 @@ payload:
   - '+.fanqiewin10.com'
   - '+.fanquanba.com'
   - '+.fanquanwang.com'
-  - '+.fanque.cc'
   - '+.fanrenshucheng.com'
   - '+.fanruan.com'
   - '+.fans.fans'
@@ -22060,7 +22062,6 @@ payload:
   - '+.farennews.com'
   - '+.farerdak.com'
   - '+.farisl.com'
-  - '+.farll.com'
   - '+.farmkd.com'
   - '+.farmsec.com'
   - '+.farsee2.com'
@@ -22930,7 +22931,6 @@ payload:
   - '+.fornature.com'
   - '+.forrealbio.com'
   - '+.forrerri.com'
-  - '+.forsigner.com'
   - '+.forsou.com'
   - '+.forthxu.com'
   - '+.fortiortech.com'
@@ -26541,7 +26541,6 @@ payload:
   - '+.hbm360.com'
   - '+.hbmes.com'
   - '+.hbmmtt.com'
-  - '+.hbmrjx888.com'
   - '+.hbnews.net'
   - '+.hbnewsoft.com'
   - '+.hbneww.com'
@@ -26781,7 +26780,6 @@ payload:
   - '+.hebca.com'
   - '+.hebcar.com'
   - '+.hebchkj.com'
-  - '+.hebcsr.org'
   - '+.hebdh.com'
   - '+.hebei.cm'
   - '+.hebeidns.com'
@@ -26893,7 +26891,6 @@ payload:
   - '+.heiyuewan.com'
   - '+.heiyunxitong.com'
   - '+.heizhushoes.com'
-  - '+.heizuan.com'
   - '+.hejiajinrong.com'
   - '+.hejinchuitou.net'
   - '+.hejiu2016.com'
@@ -30096,6 +30093,8 @@ payload:
   - '+.iikeji.com'
   - '+.iikuzhan.com'
   - '+.iikx.com'
+  - '+.iimanhua.cc'
+  - '+.iimh.net'
   - '+.iincn.net'
   - '+.iiong.com'
   - '+.iireadiness.com'
@@ -30133,7 +30132,6 @@ payload:
   - '+.ijiwen.com'
   - '+.ijizhi.com'
   - '+.ijjnews.com'
-  - '+.ijjxsw.com'
   - '+.ijnqc.com'
   - '+.ijogame.com'
   - '+.ijq.tv'
@@ -30444,7 +30442,6 @@ payload:
   - '+.imydl.com'
   - '+.imydl.tech'
   - '+.imydns.net'
-  - '+.imyip.net'
   - '+.imys.net'
   - '+.imyshare.com'
   - '+.imyuedu.com'
@@ -31435,7 +31432,6 @@ payload:
   - '+.j-smu.com'
   - '+.j1.com'
   - '+.j1health.com'
-  - '+.j1sc.com'
   - '+.j3pz.com'
   - '+.j66.net'
   - '+.j7994.com'
@@ -32314,6 +32310,7 @@ payload:
   - '+.jinfengwine.com'
   - '+.jinfuzi.com'
   - '+.jing-xian.com'
+  - '+.jingbei.li'
   - '+.jingbotech.com'
   - '+.jingc.com'
   - '+.jingcai360.net'
@@ -32630,6 +32627,7 @@ payload:
   - '+.jiulesy.com'
   - '+.jiulingwan.com'
   - '+.jiulishi.com'
+  - '+.jiulku.com'
   - '+.jiumaojiu.com'
   - '+.jiumaster.com'
   - '+.jiumei.com'
@@ -34042,6 +34040,7 @@ payload:
   - '+.kanfeidie.com'
   - '+.kangaiweishi.com'
   - '+.kangame.tv'
+  - '+.kangaroobro.com'
   - '+.kangbaifoundation.com'
   - '+.kangbatv.com'
   - '+.kangbidz.com'
@@ -35710,6 +35709,7 @@ payload:
   - '+.laoxuehost.net'
   - '+.laoxuezhuji.com'
   - '+.laoy.net'
+  - '+.laoyacname.com'
   - '+.laoyaoba.com'
   - '+.laoyoujiaju.com'
   - '+.laoyouzhibo.com'
@@ -35826,7 +35826,6 @@ payload:
   - '+.lcfw.co'
   - '+.lcgod.com'
   - '+.lchot.com'
-  - '+.lcjfz.com'
   - '+.lcjh.com'
   - '+.lckeshun.com'
   - '+.lckiss.com'
@@ -36110,6 +36109,7 @@ payload:
   - '+.lequz.com'
   - '+.leqv.online'
   - '+.lerengu.com'
+  - '+.lergao.com'
   - '+.lers123.com'
   - '+.lers168.com'
   - '+.lers168.net'
@@ -36770,7 +36770,6 @@ payload:
   - '+.linwenfa.com'
   - '+.linx-info.com'
   - '+.linxingyang.net'
-  - '+.linyezhandidi.com'
   - '+.linyi.com'
   - '+.linyi.net'
   - '+.linyilongyuan.com'
@@ -37505,7 +37504,6 @@ payload:
   - '+.lrcgc.com'
   - '+.lrcku.com'
   - '+.lrdzt.com'
-  - '+.lrenwang.com'
   - '+.lrhold.net'
   - '+.lrist.com'
   - '+.lrkdzx.com'
@@ -37544,7 +37542,6 @@ payload:
   - '+.lsjsm.com'
   - '+.lsjvps.com'
   - '+.lsjxck.com'
-  - '+.lsjyy3800.com'
   - '+.lskejisoft.com'
   - '+.lskyf.com'
   - '+.lslkkyj.com'
@@ -38704,6 +38701,7 @@ payload:
   - '+.mdjyadi.com'
   - '+.mdjyouth.com'
   - '+.mdl.ink'
+  - '+.mdmhaiwai.com'
   - '+.mdmmm.com'
   - '+.mdnice.com'
   - '+.mdouyin.com'
@@ -39234,6 +39232,7 @@ payload:
   - '+.mibugs.com'
   - '+.mic-s.com'
   - '+.micai.com'
+  - '+.micaihu.net'
   - '+.micaiying.com'
   - '+.micblo.com'
   - '+.michael-j.net'
@@ -39293,7 +39292,6 @@ payload:
   - '+.miecod.com'
   - '+.miejw.com'
   - '+.miemie.la'
-  - '+.mier123.com'
   - '+.miercn.com'
   - '+.mierhuo.com'
   - '+.mieseng.com'
@@ -39435,6 +39433,7 @@ payload:
   - '+.mingdao8.com'
   - '+.mingdaocloud.com'
   - '+.mingdongman.com'
+  - '+.mingfahong.com'
   - '+.mingin.com'
   - '+.mingjian.com'
   - '+.mingjinglu.com'
@@ -39970,7 +39969,6 @@ payload:
   - '+.moogos.com'
   - '+.moojing.com'
   - '+.moojnn.com'
-  - '+.moomcherry.com'
   - '+.moomoo.com'
   - '+.moonbasa.com'
   - '+.moonbook.com'
@@ -40057,7 +40055,6 @@ payload:
   - '+.moto8.com'
   - '+.motrix.app'
   - '+.motuo2.com'
-  - '+.motuowei.com'
   - '+.mouldbbs.com'
   - '+.mouldnews.com'
   - '+.moulem.com'
@@ -41128,7 +41125,6 @@ payload:
   - '+.newdao.net'
   - '+.newday.me'
   - '+.newdefend.com'
-  - '+.newdiediao.com'
   - '+.newdon.net'
   - '+.newdruginfo.com'
   - '+.newdu.com'
@@ -41279,6 +41275,7 @@ payload:
   - '+.nibaguai.com'
   - '+.nibaku.com'
   - '+.nibiye.com'
+  - '+.nic.de'
   - '+.nic.ren'
   - '+.nic.wang'
   - '+.nicaifu.com'
@@ -41299,7 +41296,6 @@ payload:
   - '+.nicolaszhao.com'
   - '+.niconiconi.cc'
   - '+.nicotine.vip'
-  - '+.nidong.com'
   - '+.nie.io'
   - '+.nielsenccdata.tv'
   - '+.nies.org'
@@ -43321,6 +43317,7 @@ payload:
   - '+.piaohuafl.com'
   - '+.piaojubao.com'
   - '+.piaoliang.com'
+  - '+.piaoliusan.com'
   - '+.piaoniu.com'
   - '+.piaoquantv.com'
   - '+.piaoshen.com'
@@ -43505,6 +43502,7 @@ payload:
   - '+.pipiyys.com'
   - '+.pipsemi.com'
   - '+.piqs.com'
+  - '+.piscesys.com'
   - '+.pisx.com'
   - '+.pites.cc'
   - '+.pitess.cc'
@@ -44054,6 +44052,7 @@ payload:
   - '+.pufei.net'
   - '+.pufei.org'
   - '+.pufei8.com'
+  - '+.pufeiapp.com'
   - '+.puhuacapital.com'
   - '+.puhuahui.com'
   - '+.puiedu.com'
@@ -44130,7 +44129,6 @@ payload:
   - '+.px5a.com'
   - '+.pxb7.com'
   - '+.pxcn168.com'
-  - '+.pxdsm.com'
   - '+.pxemba.com'
   - '+.pxr0.com'
   - '+.pxtsc.com'
@@ -44592,6 +44590,7 @@ payload:
   - '+.qiaohumall.com'
   - '+.qiaojiang.tv'
   - '+.qiaomi.com'
+  - '+.qiaomizi.vip'
   - '+.qiaomukeji.com'
   - '+.qiaoshenghuo.com'
   - '+.qiaotu.com'
@@ -44726,6 +44725,7 @@ payload:
   - '+.qimaren.com'
   - '+.qimengshangwu.com'
   - '+.qimi.com'
+  - '+.qimiaomh.com'
   - '+.qimihe.com'
   - '+.qiming.info'
   - '+.qiming868.com'
@@ -46394,7 +46394,6 @@ payload:
   - '+.rongji.com'
   - '+.rongledz.com'
   - '+.ronglianmeng.net'
-  - '+.rongmayisheng.com'
   - '+.rongnav.com'
   - '+.rongroad.com'
   - '+.rongshiedu.com'
@@ -47444,7 +47443,6 @@ payload:
   - '+.seezy.com'
   - '+.sefonsoft.com'
   - '+.sefyc.com'
-  - '+.segahome.com'
   - '+.segmentfault.com'
   - '+.segmentfault.net'
   - '+.segotep.com'
@@ -48420,6 +48418,7 @@ payload:
   - '+.shouliwang.com'
   - '+.shouluo.me'
   - '+.shoumizhibo.com'
+  - '+.shoumm.com'
   - '+.shouqianba.com'
   - '+.shouqiev.com'
   - '+.shouqu.me'
@@ -48638,6 +48637,7 @@ payload:
   - '+.shuiwushi.net'
   - '+.shuixyh.com'
   - '+.shuiyinbao.com'
+  - '+.shuiyinyu.com'
   - '+.shuiyoucam.com'
   - '+.shuizhiyuncaishui.com'
   - '+.shujike.com'
@@ -48902,7 +48902,6 @@ payload:
   - '+.sim800.com'
   - '+.simagic.com'
   - '+.simapple.com'
-  - '+.simba.pro'
   - '+.simcom.com'
   - '+.simcomm2m.com'
   - '+.simcu.com'
@@ -49692,7 +49691,6 @@ payload:
   - '+.songqili.net'
   - '+.songqinedu.com'
   - '+.songqinnet.com'
-  - '+.songruhui.com'
   - '+.songsgames.com'
   - '+.songshitang.com'
   - '+.songshizhao.com'
@@ -50394,7 +50392,6 @@ payload:
   - '+.suinian.com'
   - '+.suinikan.com'
   - '+.suiniyi.com'
-  - '+.suipq.com'
   - '+.suiqiao.com'
   - '+.suirui.com'
   - '+.suishenyun.net'
@@ -50776,7 +50773,6 @@ payload:
   - '+.sxnfss.com'
   - '+.sxnxl.com'
   - '+.sxnycl.com'
-  - '+.sxnyzs.com'
   - '+.sxol.com'
   - '+.sxpdf.com'
   - '+.sxpdk.com'
@@ -52327,6 +52323,8 @@ payload:
   - '+.tijianzhuanjia.com'
   - '+.tikane.com'
   - '+.tikersport.com'
+  - '+.tikimg.cc'
+  - '+.tiklink.cc'
   - '+.tikuol.com'
   - '+.tillcn.com'
   - '+.tillglance.com'
@@ -52757,7 +52755,6 @@ payload:
   - '+.top100summit.com'
   - '+.top147.com'
   - '+.top1food.com'
-  - '+.top2099.com'
   - '+.top263.net'
   - '+.top2fun.com'
   - '+.top3456.com'
@@ -53476,7 +53473,6 @@ payload:
   - '+.tuspass.net'
   - '+.tusstar.com'
   - '+.tutechanhb.com'
-  - '+.tutorialdocs.com'
   - '+.tutu001.com'
   - '+.tutuapp.com'
   - '+.tutucloud.com'
@@ -53745,7 +53741,6 @@ payload:
   - '+.tzxwzx.com'
   - '+.tzye123.com'
   - '+.tzyg.org'
-  - '+.tzysbwg.com'
   - '+.tzza.net'
   - '+.u-jingling.com'
   - '+.u-link.org'
@@ -54009,7 +54004,6 @@ payload:
   - '+.ukassignment.org'
   - '+.ukeban.com'
   - '+.ukelink.com'
-  - '+.ukelink.net'
   - '+.uker.net'
   - '+.ukh5.com'
   - '+.ukolmv.com'
@@ -54360,7 +54354,6 @@ payload:
   - '+.uu898.com'
   - '+.uuaa.net'
   - '+.uuaoz.com'
-  - '+.uuboos.com'
   - '+.uucolor.com'
   - '+.uudsp.com'
   - '+.uuecs.com'
@@ -56637,7 +56630,6 @@ payload:
   - '+.whuh-gi.com'
   - '+.whuh.com'
   - '+.whuhzzs.com'
-  - '+.whume.com'
   - '+.whuspark.com'
   - '+.whuss.com'
   - '+.whusu.org'
@@ -57552,6 +57544,7 @@ payload:
   - '+.wudku.com'
   - '+.wudusw.com'
   - '+.wueasy.com'
+  - '+.wuerys.com'
   - '+.wufafuwu.com'
   - '+.wufangbo.com'
   - '+.wufangzhai.com'
@@ -58638,7 +58631,6 @@ payload:
   - '+.xiaocong.tv'
   - '+.xiaodaka.net'
   - '+.xiaodanyang.com'
-  - '+.xiaodao.la'
   - '+.xiaodao360.com'
   - '+.xiaodaotv.com'
   - '+.xiaodaozhi.com'
@@ -58962,6 +58954,7 @@ payload:
   - '+.xiazaidb.com'
   - '+.xiazaidc.com'
   - '+.xiazaidown.com'
+  - '+.xiazaiduan.com'
   - '+.xiazaiduo.com'
   - '+.xiazaijidi.com'
   - '+.xiazaima.com'
@@ -59040,7 +59033,6 @@ payload:
   - '+.xigeweb.com'
   - '+.xigo.tv'
   - '+.xigua110.com'
-  - '+.xigua66.com'
   - '+.xiguabook.com'
   - '+.xiguaimg.com'
   - '+.xiguaji.com'
@@ -59939,7 +59931,6 @@ payload:
   - '+.xs74.com'
   - '+.xs880.com'
   - '+.xs91.net'
-  - '+.xs963.com'
   - '+.xsb.tw'
   - '+.xsb120.com'
   - '+.xsbiquge.com'
@@ -61317,7 +61308,6 @@ payload:
   - '+.yifeng-mover.com'
   - '+.yifeng.com'
   - '+.yifenghudong.com'
-  - '+.yifenghuyu.com'
   - '+.yifengke.com'
   - '+.yifengx.com'
   - '+.yifengxin.org'
@@ -62279,7 +62269,6 @@ payload:
   - '+.youluxe.com'
   - '+.youmai.com'
   - '+.youmaolu.com'
-  - '+.youmars.com'
   - '+.youme.im'
   - '+.youmeng.me'
   - '+.youmenr.com'
@@ -62659,6 +62648,7 @@ payload:
   - '+.ytcutv.com'
   - '+.ytdaily.com'
   - '+.ytdcloud.com'
+  - '+.ytdfcw.com'
   - '+.ytdsdz.com'
   - '+.yte1.com'
   - '+.ytesting.com'
@@ -62764,7 +62754,6 @@ payload:
   - '+.yuapt.com'
   - '+.yubangweb.com'
   - '+.yubnjy.com'
-  - '+.yubodata.com'
   - '+.yubohr.com'
   - '+.yuboinfo.com'
   - '+.yubosun.com'
@@ -63375,6 +63364,7 @@ payload:
   - '+.yxt-tattoo.com'
   - '+.yxt.com'
   - '+.yxt521.com'
+  - '+.yxttzb.com'
   - '+.yxtvg.com'
   - '+.yxwoo.com'
   - '+.yxxurl.com'
@@ -66166,7 +66156,6 @@ payload:
   - '+.zycsc.com'
   - '+.zyctd.com'
   - '+.zycultura.com'
-  - '+.zydhgm.com'
   - '+.zydsy.com'
   - '+.zye.cc'
   - '+.zyea.com'
