--- a/directbak.yaml
+++ b/directbak.yaml
@@ -909,7 +909,6 @@ payload:
   - '+.10min.club'
   - '+.10moons.com'
   - '+.10pkpk.com'
-  - '+.10qianwan.com'
   - '+.10s1.com'
   - '+.10sea.com'
   - '+.10soo.com'
@@ -1947,7 +1946,6 @@ payload:
   - '+.1mxian.com'
   - '+.1n11.com'
   - '+.1nami.com'
-  - '+.1news.cc'
   - '+.1nongjing.com'
   - '+.1nsou.com'
   - '+.1nyz.com'
@@ -5336,6 +5334,7 @@ payload:
   - '+.60mil.com'
   - '+.60nm.com'
   - '+.60tui.com'
+  - '+.60wr.com'
   - '+.61.com'
   - '+.61.life'
   - '+.610115.com'
@@ -5720,7 +5719,6 @@ payload:
   - '+.7068.cc'
   - '+.7080edu.com'
   - '+.7082.com'
-  - '+.708990.com'
   - '+.70dh.com'
   - '+.70dir.com'
   - '+.70god.com'
@@ -5929,6 +5927,8 @@ payload:
   - '+.77ebooks.com'
   - '+.77hei.com'
   - '+.77l.com'
+  - '+.77mh.app'
+  - '+.77mh.in'
   - '+.77music.com'
   - '+.77mv.com'
   - '+.77nt.com'
@@ -9055,7 +9055,6 @@ payload:
   - '+.aoapp.com'
   - '+.aobacore.com'
   - '+.aobaishi.com'
-  - '+.aobo62.com'
   - '+.aobosoft.com'
   - '+.aoc.com'
   - '+.aocde.com'
@@ -15424,7 +15423,6 @@ payload:
   - '+.cjdx1.com'
   - '+.cjeduw.com'
   - '+.cjftb.com'
-  - '+.cjgcedu.com'
   - '+.cjhb168.com'
   - '+.cjhospital.com'
   - '+.cjhxfund.com'
@@ -20193,7 +20191,6 @@ payload:
   - '+.dygang.net'
   - '+.dygangs.com'
   - '+.dygf.com'
-  - '+.dygod.com'
   - '+.dygod.org'
   - '+.dyhhy.cc'
   - '+.dyhjw.com'
@@ -24853,6 +24850,7 @@ payload:
   - '+.gqooh.com'
   - '+.gqqsm.com'
   - '+.gqsoso.com'
+  - '+.gqsou.com'
   - '+.gqt168.com'
   - '+.gqtpw.com'
   - '+.gqyy8.com'
@@ -29424,6 +29422,7 @@ payload:
   - '+.ib07.com'
   - '+.ibaba88.com'
   - '+.ibadboy.net'
+  - '+.ibaiji.org'
   - '+.ibailve.com'
   - '+.ibaizhu.com'
   - '+.ibanbu.com'
@@ -34739,6 +34738,8 @@ payload:
   - '+.know88.com'
   - '+.knowgive.com'
   - '+.knowhow-china.com'
+  - '+.knowingclouds.com'
+  - '+.knowingcloudvip.com'
   - '+.knowncoin.com'
   - '+.knownpcb.com'
   - '+.knownsec.com'
@@ -36060,6 +36061,7 @@ payload:
   - '+.lemonyule.com'
   - '+.lemote.com'
   - '+.lempstack.com'
+  - '+.lengcat.com'
   - '+.lenget.com'
   - '+.lenggirl.com'
   - '+.lengqing.org'
@@ -38433,6 +38435,7 @@ payload:
   - '+.maobugames.com'
   - '+.maodou.com'
   - '+.maodouapp.com'
+  - '+.maoercdn.com'
   - '+.maoerduo2018.com'
   - '+.maoflag.net'
   - '+.maofly.com'
@@ -39292,6 +39295,7 @@ payload:
   - '+.miecod.com'
   - '+.miejw.com'
   - '+.miemie.la'
+  - '+.mier123.com'
   - '+.miercn.com'
   - '+.mierhuo.com'
   - '+.mieseng.com'
@@ -41491,7 +41495,6 @@ payload:
   - '+.nk84.com'
   - '+.nkp969.com'
   - '+.nkscdn.com'
-  - '+.nktaba.com'
   - '+.nktxv.com'
   - '+.nky556.com'
   - '+.nkyp.com'
@@ -43758,7 +43761,6 @@ payload:
   - '+.portablesoft.org'
   - '+.portalcdn.cdnetworks.com'
   - '+.ports-intl.com'
-  - '+.pos.gold'
   - '+.posbar.com'
   - '+.poseidon.dl.playstation.net'
   - '+.poseidong.com'
@@ -43889,6 +43891,7 @@ payload:
   - '+.ppxhw.com'
   - '+.ppxs.net'
   - '+.ppxwo.com'
+  - '+.ppym.xyz'
   - '+.ppys.net'
   - '+.ppys5.com'
   - '+.ppzhan.com'
@@ -44130,7 +44133,6 @@ payload:
   - '+.pxb7.com'
   - '+.pxcn168.com'
   - '+.pxemba.com'
-  - '+.pxr0.com'
   - '+.pxtsc.com'
   - '+.pxtu.com'
   - '+.pxtx.com'
@@ -49672,6 +49674,7 @@ payload:
   - '+.someibo.com'
   - '+.somepen.com'
   - '+.something8.com'
+  - '+.sometracking.com'
   - '+.somo.so'
   - '+.somode.com'
   - '+.somsds.com'
@@ -50180,7 +50183,6 @@ payload:
   - '+.stcmcu.com'
   - '+.stcmcudata.com'
   - '+.stcn.com'
-  - '+.stcpsm.com'
   - '+.stcv66.com'
   - '+.stdaily.com'
   - '+.stdard.com'
@@ -51239,6 +51241,7 @@ payload:
   - '+.tabalt.net'
   - '+.tachangxing.com'
   - '+.taclsc.org'
+  - '+.tactan.net'
   - '+.tadseeker.com'
   - '+.tadu.com'
   - '+.taeapp.com'
@@ -52171,7 +52174,6 @@ payload:
   - '+.tianqijun.com'
   - '+.tianqikb.com'
   - '+.tianqistatic.com'
-  - '+.tianqiwang.org'
   - '+.tianrow.com'
   - '+.tianruixinxi.com'
   - '+.tianruiyun.com'
@@ -52373,6 +52375,7 @@ payload:
   - '+.tingshubao.com'
   - '+.tingshuge.com'
   - '+.tingtao.net'
+  - '+.tingxiangzu.com'
   - '+.tingyulou.com'
   - '+.tingyun.com'
   - '+.tingyutech.net'
@@ -53851,6 +53854,7 @@ payload:
   - '+.ucjoy.com'
   - '+.uckendo.com'
   - '+.ucloudgda.com'
+  - '+.ucloudnaming.info'
   - '+.ucly.net'
   - '+.ucnano.com'
   - '+.ucnest.com'
@@ -54830,6 +54834,7 @@ payload:
   - '+.vipshopyao.com'
   - '+.vipsinaapp.com'
   - '+.vipsmt.com'
+  - '+.vipsrc.com'
   - '+.vipstatic.com'
   - '+.vipstore.com'
   - '+.viptail.com'
@@ -55199,6 +55204,7 @@ payload:
   - '+.w18.net'
   - '+.w1989.com'
   - '+.w20.net'
+  - '+.w2008.store'
   - '+.w218.com'
   - '+.w2bc.com'
   - '+.w2fzu.com'
@@ -60876,7 +60882,6 @@ payload:
   - '+.ybscjp.com'
   - '+.ybtong.com'
   - '+.ybtvyun.com'
-  - '+.ybtzjt.com'
   - '+.ybvipdns.com'
   - '+.ybvv.com'
   - '+.ybword.com'
@@ -64118,6 +64123,7 @@ payload:
   - '+.zhangkai.red'
   - '+.zhangle.com'
   - '+.zhangli2015.com'
+  - '+.zhanglijie.work'
   - '+.zhangliziyun.com'
   - '+.zhangluya.com'
   - '+.zhanglvtong.com'
@@ -65692,6 +65698,7 @@ payload:
   - '+.zppop.com'
   - '+.zppxba.com'
   - '+.zptong.com'
+  - '+.zptq.com'
   - '+.zpzyb.com'
   - '+.zq12369.com'
   - '+.zq235.com'
